--- a/client/main.html
+++ b/client/main.html
@@ -6,7 +6,7 @@
 <body>
 
     <div class="container">
-        <header class="navbar navbar-default" role="navigation">
+        <header class="navbar navbar-inverse" role="navigation">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">ClickClique</a>
             </div>
