Edit/delete posts from client now working. Reorganized a few scripts, tested latency compensation method.

--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,5 @@
 <head>
     <meta charset="UTF-8">
-    <title>ClickClique</title>
+    <link rel="favicon" href="favicon.ico">
+    <title>DoubleClique</title>
 </head>
